# Physics-Engine

./: .gitignore  CMakeLists.txt  main.c  main.cpp
collision/: collision.c  collision.cpp  collision.h  collision_types.h
core/: entity.c  entity.cpp  entity.h  vector.c  vector.h  world.cpp  world.h
physics/: kinematic.cpp  kinematic.h  particle.cpp  particle.h  physics.c  physics.cpp  physics.h  physics_component.c  physics_component.cpp  physics_component.h  rigid_body.c  rigid_body.cpp  rigid_body.h
rendering/: circle.c  circle.h  rectangle.c  rectangle.h  renderer.c  renderer.cpp  renderer.h  shape.c  shape.h  shape_renderer.c  shape_renderer.h
shapes/: circle.c  circle.cpp  circle.h  rectangle.c  rectangle.cpp  rectangle.h  shape.c  shape.cpp  shape.h
src/: main.cpp
src/collision/: collision.cpp  collision.h
src/core/: entity.cpp  entity.h  ui_manager.h  vector.cpp  vector.h  window.cpp  window.h  world.cpp  world.h
src/engine/: engine.h
src/physics/: kinematic.c  kinematic.cpp  kinematic.h  particle.cpp  particle.h  physics.cpp  physics.h  physics_component.cpp  physics_component.h  rigid_body.cpp  rigid_body.h
src/rendering/: renderer.h
src/shapes/: circle.h  rectangle.h  shape.h
src/ui/: ui_action.cpp  ui_action.h  ui_component.cpp  ui_component.h  ui_manager.cpp  ui_manager.h  ui_popup.cpp  ui_popup.h
src/ui/components/: ui_component.cpp  ui_component.h  ui_main.cpp  ui_main.h  ui_popup.cpp  ui_popup.h
test/: entity_test.cpp  physics_component_test.cpp  vector2d_test.cpp  world_test.cpp
test/components/: collision_test.cpp  entity_test.cpp  kinematic_test.cpp  particle_test.cpp  physics_update_test.cpp  rigid_body_test.cpp  shapes_circle_test.cpp  shapes_rectangle_test.cpp  vector2d_test.cpp
test/ui/: world_test.cpp
